[package]
name = "backend"
version = "0.1.0"
authors = ["David Hinton <hintondavid11@gmail.com>", "Jonathin Papineau <public@jpapineau.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.4.7"
diesel = { version = "1.4.4", features = ["postgres"] }
